--- a/tags/release-1.0.4/README
+++ b/tags/release-1.0.4/README
@@ -41,17 +41,14 @@ IE      - very slow on my system
   The Amazing Race 17             The Amazing Race
 
   To overcome this issue you can add them to override.txt using the following 
-  format - recorded name:::tvrage name
+  format - recorded title:::tvrage title
 
   Survivor: Nicaragua:::Survivor
   62nd Primetime Emmy Awards:::The Emmy Awards
   2010 MTV Video Music Awards:::MTV Video Music Awards
   2010 World Series of Poker:::World Series of Poker
   Hawaii Five-0:::Hawaii Five-0 (2010)
-  Amazing Race 17:::Amazing Race
-
-  Note: If the show has "The" at the beginning og the title like "The Amazing Race",
-  leave "The" off of the beginning. 
+  The Amazing Race 17:::The Amazing Race
 
   Some shows like Survivor have a different name every year but need to be listed
   under Survivor within mythepisode.  You can add these by putting --- inbetween each one.
