--- a/wiki/Contributors.wiki
+++ b/wiki/Contributors.wiki
@@ -10,6 +10,7 @@ suggestions.
 Chris K.:
   * DB query update
   * Update to grabshowsall.pl for multiple aoi's
+  * Added country.txt file
   * Update to delete button for previous recordings
   * Fixed sort problem on previous recordings
   * Fix for grabid.pl and missing episodes
