--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+1.0.5
+    * Addition of data/episode/country.txt so that the user can
+      specify the countries they choose for show listings.  The default
+      country is the "US" if no country file exists.
+
 1.0.4
     * Update to grabid.pl that signicantly reduces the time it takes to
       update episode information.  Remove the need for summary.pl
