--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,10 @@
     * Addition of data/episode/country.txt so that the user can
       specify the countries they choose for show listings.  The default
       country is the "US" if no country file exists.
+    * Fix tvwish title issue
+    * Hover over the show title on the episodes listing page and get a
+      show summary.  The show title is also linked to tvrage for the
+      specific show title.
 
 1.0.4
     * Update to grabid.pl that signicantly reduces the time it takes to
