--- a/README
+++ b/README
@@ -50,18 +50,21 @@ IE      - very slow on my system
   Hawaii Five-0:::Hawaii Five-0 (2010)
   The Amazing Race 17:::The Amazing Race
 
-  Some shows like Survivor have a different name every year but need to be listed
-  under Survivor within mythepisode.  You can add these by putting --- inbetween each one.
+  Some shows like Survivor have a different name every year but need to be 
+  listed under Survivor within mythepisode.  You can add these by putting --- 
+  inbetween each one.
+
   Survivor: Nicaragua---Survivor: Pearl Island:::Survivor
   2010 World Series of Poker---2011 World Series of Poker:::World Series of Poker
 
-##################################################################################
+################################################################################
 I'm interested in feedback from anyone running trunk or the soon to be
 release .24.  I don't plan on upgrading my system anytime soon.
 
 If you are running mythweb trunk or greater you will need to make a couple of 
-changes to episodes.php since trunk has changed some of the mythweb classes/includes.  
-I've only had feedback from others and haven't tested this with trunk.
+changes to episodes.php since trunk has changed some of the mythweb 
+classes/includes.  I've only had feedback from others and haven't tested this 
+with trunk.
 
 - require_once 'classes/Schedule.php';
 - require_once 'classes/Channel.php';
@@ -75,7 +78,7 @@ I've only had feedback from others and haven't tested this with trunk.
 
 - foreach ($Scheduled_Recordings as $callsign => $shows) {
 + foreach (Schedule::findScheduled() as $callsign => $shows) {
-##################################################################################
+################################################################################
 
 As installed on my system
 
@@ -88,8 +91,7 @@ tar xvf /tmp/episode.tar
 cd /usr/share/mythtv/mythweb/modules/_shared/tmpl/default
 Add a line like the following to header.php  
 
-NOTE: If you have installed mythepisode in the past you need to update the line below 
-as it has changed.
+NOTE: If you have installed mythepisode in the past you need to update the line below as it has changed.
 
 EXISTING LINE: <a href="tv/recorded"><?php echo t('Recorded Programs') ?></a>
 EXISTING LINE: &nbsp; | &nbsp;
@@ -108,8 +110,7 @@ cd /usr/share/mythtv/mythweb/data
 ln -s /var/lib/mythtv/episode  episode
 
 4.
-download tvwish from http://www.templetons.com/brad/myt/tvwish.html and install it
-under /usr/share/mythtv/tvwish
+download tvwish from http://www.templetons.com/brad/myt/tvwish.html and install it under /usr/share/mythtv/tvwish
 Add a cronjob to roots crontab
 00 12 * * * /usr/share/mythtv/mythweb/modules/episode/utils/runwish > /dev/null 2>&1
 
@@ -117,7 +118,21 @@ Add a cronjob to roots crontab
 cd /usr/share/mythtv/mythweb/modules/_shared/lang
 ./build_translation.pl
 
+6.
+cd /var/lib/mythtv/episode
+vi country.txt
+Add a line for each country you wish to display shows for.
+example:
+US
+CA
+UK
+
+This would display shows for all 3 countries after you perform an "Update Show
+Listing".  If you decide not to create a country.txt file the display will 
+default to "US" only show.
+
 *Note:*
-If your paths differ from mine above then you will have to make a few changes to paths in 
-the cronjob and the scripts below.  I plan to fix this in the future.
+If your paths differ from mine above then you will have to make a few changes 
+to paths in the cronjob and the scripts below.  I plan to fix this in the 
+future.
 - runwish
