--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -7,7 +7,7 @@
 
 {{{
 NOTES:
-I have tested mythepisode with the following browsers(although not thoroughly)
+I have test mythepisode with the following browsers(although not thoroughly)
 Firefox - very fast on my system
 Safari  - very fast on my system
 Chrome  - very fast on my system
@@ -22,11 +22,11 @@ IE      - very slow on my system
   info until you do a "Update Episode Listing" on the episode page.  This will
   force a grab of the thumbnail and show information.
 
-- I have added a file called override.txt which resides in the data/episode dir.  
-  When you install mythepisode if the file doesn't exist in data/episode a template
-  will be copied from the utils directory and placed in data/episode.  This file is 
-  used to overcome issues with shows that have different recorded titles than those 
-  that come from tvrage.com
+- I have added a file called override.txt which will reside in
+  data/episode/override.txt.  When you first install mythepisode if the file
+  doesn't exist in data/episode it will be copied from the utils directory and
+  placed in data/episode.  This file is used to overcome issues with shows that
+  have different recorded titles than those that come from tvrage.com
 
   A couple of examples that impact me
 
@@ -47,20 +47,21 @@ IE      - very slow on my system
   Hawaii Five-0:::Hawaii Five-0 (2010)
   The Amazing Race 17:::The Amazing Race
 
-  Some shows like Survivor have a different name every season but need to be listed
-  under Survivor within mythepisode.  You can add these by putting --- in between each 
-  one.
+  Some shows like Survivor have a different name every year but need to be
+  listed under Survivor within mythepisode.  You can add these by putting ---
+  inbetween each one.
 
   Survivor: Nicaragua---Survivor: Pearl Island:::Survivor
   2010 World Series of Poker---2011 World Series of Poker:::World Series of Poker
 
-##################################################################################
+################################################################################
 I'm interested in feedback from anyone running trunk or the soon to be
 release .24.  I don't plan on upgrading my system anytime soon.
 
 If you are running mythweb trunk or greater you will need to make a couple of
-changes to episodes.php since trunk has changed some of the mythweb classes/includes.
-I've only had feedback from others and haven't tested this with trunk.
+changes to episodes.php since trunk has changed some of the mythweb
+classes/includes.  I've only had feedback from others and haven't tested this
+with trunk.
 
 - require_once 'classes/Schedule.php';
 - require_once 'classes/Channel.php';
@@ -74,7 +75,7 @@ I've only had feedback from others and haven't tested this with trunk.
 
 - foreach ($Scheduled_Recordings as $callsign => $shows) {
 + foreach (Schedule::findScheduled() as $callsign => $shows) {
-##################################################################################
+################################################################################
 
 As installed on my system
 
@@ -87,8 +88,7 @@ tar xvf /tmp/episode.tar
 cd /usr/share/mythtv/mythweb/modules/_shared/tmpl/default
 Add a line like the following to header.php
 
-NOTE: If you have installed mythepisode in the past you need to update the line below
-as it has changed.
+NOTE: If you have installed mythepisode in the past you need to update the line below as it has changed.
 
 EXISTING LINE: <a href="tv/recorded"><?php echo t('Recorded Programs') ?></a>
 EXISTING LINE: &nbsp; | &nbsp;
@@ -107,8 +107,7 @@ cd /usr/share/mythtv/mythweb/data
 ln -s /var/lib/mythtv/episode  episode
 
 4.
-download tvwish from http://www.templetons.com/brad/myt/tvwish.html and install it
-under /usr/share/mythtv/tvwish
+download tvwish from http://www.templetons.com/brad/myt/tvwish.html and install it under /usr/share/mythtv/tvwish
 Add a cronjob to roots crontab
 00 12 * * * /usr/share/mythtv/mythweb/modules/episode/utils/runwish > /dev/null 2>&1
 
@@ -116,9 +115,23 @@ Add a cronjob to roots crontab
 cd /usr/share/mythtv/mythweb/modules/_shared/lang
 ./build_translation.pl
 
+6.
+cd /var/lib/mythtv/episode
+vi country.txt
+Add a line for each country you wish to display shows for.
+example:
+US
+CA
+UK
+
+This would display shows for all 3 countries after you perform an "Update Show
+Listing".  If you decide not to create a country.txt file the display will
+default to "US" only show.
+
 *Note:*
-If your paths differ from mine above then you will have to make a few changes to paths in
-the cronjob and the scripts below.  I plan to fix this in the future.
+If your paths differ from mine above then you will have to make a few changes
+to paths in the cronjob and the scripts below.  I plan to fix this in the
+future.
 - runwish
 
 }}}
