--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 1.0.7
     * Fix to external tvrage links
     * Updated some of the code comments
+    * Update the episode listing page to display episodes that are
+      currently available to watch
+    * Update to welcome page
+    * Fix default page link
 
 1.0.6
     * Fix path issues with handler.php
