Fix sorting issue for recorded episodes

--- a/CHANGES
+++ b/CHANGES
@@ -2,9 +2,11 @@
     * Fix to external tvrage links
     * Updated some of the code comments
     * Update the episode listing page to display episodes that are
-      currently available to watch
+      currently available to watch in the recordings page
     * Update to welcome page
-    * Fix default page link
+    * Fix default mainpage link
+    * Turned on episode deletes
+    * Fix sorting on recorded episodes page
 
 1.0.6
     * Fix path issues with handler.php
