--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,8 @@
     * Fix default mainpage link
     * Turned on episode deletes
     * Fix sorting on recorded episodes page
+    * Fix for shows that are set to never record
+    * Add check for out of date episode information
 
 1.0.6
     * Fix path issues with handler.php
