Update sorting for previous recordings

--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@
     * Add option to hide tvwish menus/options
     * Identify and display episodes that are scheduled to record but
       not matched in mythepisode
+    * Updated sorting on previous recordings
 
 1.0.6
     * Fix path issues with handler.php
