Edited wiki page Patches through web user interface.

--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -15,6 +15,7 @@
     * Add check for out of date episode information
     * Add option to hide tvwish menus/options
     * Identify and display episodes that are scheduled to record but not matched in mythepisode
+    * Updated sorting on previous recordings
 
 1.0.6
     * Fix path issues with handler.php
