Edited wiki page Contributors through web user interface.

--- a/wiki/Contributors.wiki
+++ b/wiki/Contributors.wiki
@@ -7,7 +7,11 @@ suggestions.
 
 = Contributors =
 Alec C.:
-  * Fix tvrage links
+  * Fix to external tvrage links
+  * Update the episode listing page to display episodes that are currently available to watch in the recordings page
+  * Update to welcome page
+  * Fix default mainpage link
+  * Fix for shows that are set to never record
 
 Chris K.:
   * DB query update
@@ -16,7 +20,11 @@ Chris K.:
   * Update to delete button for previous recordings
   * Fixed sort problem on previous recordings
   * Fix for grabid.pl and missing episodes
-  
+  * Fix sorting on recorded episodes page
+  * Add check for out of date episode information
+  * Add option to hide tvwish menus/options
+  * Identify and display episodes that are scheduled to record but not matched in mythepisode
+
 Doug H.:
   * Fix to handler.php to improve performance
   * Update to the mainpage to only display recorded shows
