--- a/README
+++ b/README
@@ -16,14 +16,7 @@ Safari  - very fast on my system
 Chrome  - very fast on my system
 IE      - very slow on my system
 
-- If it takes a long time to load the main page try setting $getRecorded to 0 
-  in handler.php. If you do this I think the page will load faster but shows 
-  that you have recorded won't show up in green on the main page.
-
-- The episodes page will display a thumbnail and additional information for 
-  each show.  The info will initially be blank with no thumbnail and blank show 
-  info until you do a "Update Episode Listing" on the episode page.  This will 
-  force a grab of the thumbnail and show information.
+- Config setting can be changed in data/episode/config.ini
 
 - I have added a file called override.txt which will reside in 
   data/episode/override.txt.  When you first install mythepisode if the file 
