--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -16,6 +16,8 @@
     * Add option to hide tvwish menus/options
     * Identify and display episodes that are scheduled to record but not matched in mythepisode
     * Updated sorting on previous recordings
+    * Added config file to data/episode so user prefs are preserved through upgrades
+
 
 1.0.6
     * Fix path issues with handler.php
