--- a/trunk/CHANGES
+++ b/trunk/CHANGES
@@ -15,6 +15,8 @@
     * Updated sorting on previous recordings
     * Added config file to data/episode so user prefs are preserved
       through upgrades
+    * Add ability to view mythepisode config options through the mythweb
+      settings util
 
 1.0.6
     * Fix path issues with handler.php
