--- a/trunk/README
+++ b/trunk/README
@@ -1,7 +1,7 @@
 ##
  # mythepisode README
  #
- # @url         $URL$
+ # @url         $URL: https://mythepisode.googlecode.com/svn/trunk/README $
  # @date        $Date$
  # @version     $Revision$
  # @author      $Author$
