fix file properties

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ##
  # mythepisode README
  #
- # @url         $URL: https://mythepisode.googlecode.com/svn/trunk/README $
+ # @url         $URL$
  # @date        $Date$
  # @version     $Revision$
  # @author      $Author$
