Added ability to change config file

--- a/CHANGES
+++ b/CHANGES
@@ -15,7 +15,7 @@
     * Updated sorting on previous recordings
     * Added config file to data/episode so user prefs are preserved
       through upgrades
-    * Add ability to view mythepisode config options through the mythweb
+    * Add ability to update mythepisode config options through the mythweb
       settings util
 
 1.0.6
