Edited wiki page Patches through web user interface.

--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -17,7 +17,7 @@
     * Identify and display episodes that are scheduled to record but not matched in mythepisode
     * Updated sorting on previous recordings
     * Added config file to data/episode so user prefs are preserved through upgrades
-
+    * Add ability to update mythepisode config options through the mythweb settings util
 
 1.0.6
     * Fix path issues with handler.php
