Add thumbnail size setting Automatically add config option to congig.ini when user saves settings if it doesn't exist.

--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@
       through upgrades
     * Add ability to update mythepisode config options through the mythweb
       settings util
+    * Allow user to change thumbnail size in mythepisode configuration
 
 1.0.6
     * Fix path issues with handler.php
